--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,9 @@
 *.tar.gz
 *.rar
 
-.idea
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+src/java/PopupAuthenticator.java
 src/java/PopupAuthenticator.java
 src/java/PopupAuthenticator.java
