--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,11 @@ hs_err_pid*
 src/java/PopupAuthenticator.java
 src/java/PopupAuthenticator.java
 src/java/PopupAuthenticator.java
-.idea/
-.idea
+.idea/*
 .DS_Store
 .idea/workspace.xml
 src/java/MyProperties.java
 src/java/MyProperties.java
+.idea/workspace.xml
+.idea/workspace.xml
+.idea/workspace.xml
