--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-src/java/PopupAuthenticator.java
+src/java/old.PopupAuthenticator.java
 .idea/*
 .DS_Store
 .idea/workspace.xml
