Обновлен MySQL до 8

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ src/java/old.PopupAuthenticator.java
 src/java/MyProperties.java
 src/java/MyProperties.java
 .idea/workspace.xml
+.idea/StartMail.iml
+.idea/libraries/Java_EE_6_Java_EE_6.xml
+.idea/workspace.xml
