--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,24 @@ src/java/MyProperties.java
 .idea/StartMail.iml
 .idea/libraries/Java_EE_6_Java_EE_6.xml
 .idea/workspace.xml
+.idea/compiler.xml
+.idea/compiler.xml
+.idea/libraries/Java_EE_6_Java_EE_6.xml
+.idea/libraries/lib.xml
+.idea/misc.xml
+.idea/compiler.xml
+.idea/libraries/Java_EE_6_Java_EE_6.xml
+.idea/libraries/lib.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/UpdateMailDB.iml
+.idea/vcs.xml
+.idea/workspace.xml
+.idea/compiler.xml
+.idea/libraries/Java_EE_6_Java_EE_6.xml
+.idea/libraries/lib.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/UpdateMailDB.iml
+.idea/vcs.xml
+.idea/workspace.xml
