--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ src/java/old.PopupAuthenticator.java
 src/java/com.MyProperties.java
 src/java/com.MyProperties.java
 .idea/workspace.xml
-.idea/com.StartMail.iml
+.idea/com.MailingEmailAccount.iml
 .idea/libraries/Java_EE_6_Java_EE_6.xml
 .idea/workspace.xml
 .idea/compiler.xml
